# my-audio-summaries

./: .gitattributes  .gitignore  README.md  audio-test.ipynb  project-context.md  pyproject.toml  sandbox.ipynb  test_pipeline.py
config/: .env.example  default.yaml  default_OLD.yaml
docs-to-audio/: .gitignore  LICENSE  main.py
notebooks/: sandbox.ipynb  tss-test.ipynb
src/: main.py
src/audio/: generator.py  utils.py
src/fetchers/: base.py  gmail.py
src/processors/: base.py  pdf.py  text.py
src/utils/: auth.py
tests/: test_audio_generator.py  test_gmail_fetch.py  test_processors.py
tests/example-documents/: Attention is all you need.txt  mock-BoD-draft.txt
tests/test_fetchers/: test_gmail.py
